# buroca

./: .gitignore  README.rst  bumpversion.cfg  setup.cfg  tasks.py  tox.ini
src/buroca/: __init__.py  __main__.py  cli.py  convert.py  db.py  errors.py  filters.py  global_functions.py  loffice.py  paths.py  pdf.py  sheets.py  templates.py  viewers.py
tests/: conftest.py  test_cli.py  test_examples.py  test_open_document_template.py  test_transformation_functions.py
tests/examples/: result.ods  result.odt  template.ods  template.odt
tests/project/data/: band.yml
tests/project/data/person/: john.yml  paul.yml
tests/project/reports/: resumee-john.md  resumee-paul.md  resumee.yml
