[metadata]
name = buroca
version = 0.1.1
description = A framework to help implementing Bureaucracy as code. 
long_description = file: README.rst
author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/buroca
keywords = 
	automation
	devops
	tools
license = GNU General Public License (GPL)
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries

[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires = 
	oosheet
	jinja2

[options.entry_points]
console_scripts = 
	buroca = buroca.__main__:main

[egg_info]
tag_build = 0
tag_date = 0
tag_svn_revision = 0
